[build-system]
requires = [
    "poetry-core==2.1.3",
]
build-backend = "poetry.core.masonry.api"

[project]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "anyio>=4.4.0",
    "cryptography==43.0.3",
    "httpx==0.28.1",
    "mashumaro==3.16",
    "msal==1.33.0",
    "requests>=2.32.2",
]
description = "The Liminal SDK for Python"
license = "Apache-2.0"
name = "liminal-sdk-python"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "2024.09.0b1"

[project.optional-dependencies]
all = [
    "liminal-sdk-python[build,lint,release,test]",
]
build = [
    "uv==0.8.17",
]
lint = [
    "blacken-docs==1.20.0",
    "codespell==2.4.1",
    "darglint==1.8.1",
    "mypy==1.17.1",
    "pre-commit-hooks==6.0.0",
    "pre-commit==4.3.0",
    "pylint==3.3.8",
    "pytest-asyncio==1.1.0",
    "pytest==8.4.2",
    "ruff==0.13.0",
]
release = [
    "tomli==2.2.1",
    "tomli-w==1.2.0",
]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.1.0",
    "pytest-cov==7.0.0",
    "pytest-httpx==0.35.0",
]

[tool.coverage.report]
exclude_lines = [
    "TYPE_CHECKING",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = [
    "liminal",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
python_version = "3.11"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = [
    "Liminal AI <info@liminal.ai>",
]
packages = [
    { include = "liminal" },
]

[tool.pylint.BASIC]
class-const-naming-style = "any"
expected-line-ending-format = "LF"

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.MAIN]
py-version = "3.11"
ignore = [
    "tests",
]
jobs = 2
init-hook = "from pathlib import Path; import sys; from pylint.config import find_default_config_files; sys.path.append( str(Path(next(find_default_config_files())).parent.joinpath('pylint/plugins'))\n    ) "
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
persistent = false
fail-on = [
    "I",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    # These are subjective and should be left up to the developer:
    "abstract-method",
    "duplicate-code",
    "too-many-arguments",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",

    # Handled by ruff
    # Ref: <https://github.com/astral-sh/ruff/issues/970>
    "anomalous-backslash-in-string",
    "assert-on-string-literal",
    "assert-on-tuple",
    "assigning-non-slot",
    "await-outside-async",
    "bad-classmethod-argument",
    "bad-configuration-section",
    "bad-docstring-quotes",
    "bad-dunder-name",
    "bad-format-character",
    "bad-format-string",
    "bad-indentation",
    "bad-open-mode",
    "bad-plugin-value",
    "bad-staticmethod-argument",
    "bad-str-strip-call",
    "bad-string-format-type",
    "bare-except",
    "bidirectional-unicode",
    "binary-op-exception",
    "boolean-datetime",
    "broad-exception-caught",
    "broad-exception-raised",
    "broken-collections-callable",
    "broken-noreturn",
    "cell-var-from-loop",
    "compare-to-empty-string",
    "comparison-of-constants",
    "comparison-with-itself",
    "consider-alternative-union-syntax",
    "consider-iterating-dictionary",
    "consider-merging-isinstance",
    "consider-ternary-expression",
    "consider-using-alias",
    "consider-using-any-or-all",
    "consider-using-augmented-assign",
    "consider-using-dict-comprehension",
    "consider-using-dict-items",
    "consider-using-from-import",
    "consider-using-generator",
    "consider-using-get",
    "consider-using-in",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "consider-using-set-comprehension",
    "consider-using-sys-exit",
    "consider-using-ternary",
    "consider-using-with",
    "continue-in-finally",
    "dangerous-default-value",
    "docstring-first-line-empty",
    "duplicate-argument-name",
    "duplicate-bases",
    "duplicate-except",
    "duplicate-key",
    "duplicate-value",
    "else-if-used",
    "empty-comment",
    "empty-docstring",
    "eq-without-hash",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "f-string-without-interpolation",
    "fixme",
    "forgotten-debug-statement",
    "format-combined-specification",
    "format-needs-mapping",
    "format-string-without-interpolation",
    "function-redefined",
    "global-at-module-level",
    "global-statement",
    "global-variable-not-assigned",
    "implicit-str-concat",
    "import-outside-toplevel",
    "import-private-name",
    "import-self",
    "inconsistent-quotes",
    "inconsistent-return-statements",
    "init-is-generator",
    "invalid-all-format",
    "invalid-all-object",
    "invalid-bool-returned",
    "invalid-bytes-returned",
    "invalid-character-backspace",
    "invalid-character-esc",
    "invalid-character-nul",
    "invalid-character-sub",
    "invalid-character-zero-width-space",
    "invalid-envvar-default",
    "invalid-hash-returned",
    "invalid-index-returned",
    "invalid-length-returned",
    "invalid-name",
    "keyword-arg-before-vararg",
    "line-too-long",
    "literal-comparison",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "logging-too-few-args",
    "logging-too-many-args",
    "lost-exception",
    "magic-value-comparison",
    "method-cache-max-size-none",
    "misplaced-bare-raise",
    "misplaced-comparison-constant",
    "misplaced-future",
    "missing-class-docstring",
    "missing-final-newline",
    "missing-format-argument-key",
    "missing-format-string-key",
    "missing-function-docstring",
    "missing-module-docstring",
    "mixed-format-string",
    "modified-iterating-set",
    "multiple-imports",
    "multiple-statements",
    "named-expr-without-context",
    "nan-comparison",
    "nested-min-max",
    "no-classmethod-decorator",
    "no-else-break",
    "no-else-continue",
    "no-else-raise",
    "no-else-return",
    "no-self-argument",
    "no-self-use",
    "no-staticmethod-decorator",
    "non-ascii-file-name",
    "non-ascii-module-import",
    "non-ascii-name",
    "nonexistent-operator",
    "nonlocal-and-global",
    "nonlocal-without-binding",
    "not-in-loop",
    "notimplemented-raised",
    "pointless-exception-statement",
    "pointless-statement",
    "potential-index-error",
    "property-with-parameters",
    "protected-access",
    "raise-missing-from",
    "redefined-argument-from-local",
    "redefined-builtin",
    "redefined-loop-name",
    "redundant-u-string-prefix",
    "reimported",
    "relative-beyond-top-level",
    "repeated-keyword",
    "return-arg-in-generator",
    "return-in-init",
    "return-outside-function",
    "self-assigning-variable",
    "simplifiable-if-expression",
    "simplifiable-if-statement",
    "single-string-used-for-slots",
    "singledispatch-method",
    "singledispatchmethod-function",
    "singleton-comparison",
    "star-needs-assignment-target",
    "subprocess-popen-preexec-fn",
    "subprocess-run-check",
    "super-with-arguments",
    "super-without-brackets",
    "syntax-error",
    "too-complex",
    "too-few-format-args",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-format-args",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-star-expressions",
    "too-many-statements",
    "trailing-comma-tuple",
    "trailing-newlines",
    "trailing-whitespace",
    "truncated-format-string",
    "try-except-raise",
    "typevar-double-variance",
    "typevar-name-incorrect-variance",
    "typevar-name-mismatch",
    "undefined-all-variable",
    "undefined-variable",
    "unexpected-special-method-signature",
    "ungrouped-imports",
    "unidiomatic-typecheck",
    "unknown-option-value",
    "unnecessary-comprehension",
    "unnecessary-dict-index-lookup",
    "unnecessary-direct-lambda-call",
    "unnecessary-dunder-call",
    "unnecessary-ellipsis",
    "unnecessary-lambda",
    "unnecessary-lambda-assignment",
    "unnecessary-pass",
    "unnecessary-semicolon",
    "unneeded-not",
    "unspecified-encoding",
    "unused-argument",
    "unused-format-string-argument",
    "unused-format-string-key",
    "unused-import",
    "unused-variable",
    "use-a-generator",
    "use-dict-literal",
    "use-implicit-booleaness-not-len",
    "use-list-literal",
    "use-maxsplit-arg",
    "use-sequence-for-iteration",
    "use-set-for-membership",
    "use-yield-from",
    "used-before-assignment",
    "used-prior-global-declaration",
    "useless-else-on-loop",
    "useless-import-alias",
    "useless-object-inheritance",
    "useless-option-value",
    "useless-return",
    "useless-with-lock",
    "using-f-string-in-unsupported-version",
    "wildcard-import",
    "wrong-import-order",
    "wrong-import-position",
    "yield-inside-async-function",
    "yield-outside-function",

    # Handled by mypy
    # Ref: <https://github.com/antonagestam/pylint-mypy-overlap>
    "abstract-class-instantiated",
    "arguments-differ",
    "assigning-non-slot",
    "assignment-from-no-return",
    "assignment-from-none",
    "bad-exception-cause",
    "bad-format-character",
    "bad-reversed-sequence",
    "bad-super-call",
    "bad-thread-instantiation",
    "catching-non-exception",
    "comparison-with-callable",
    "deprecated-class",
    "dict-iter-missing-items",
    "format-combined-specification",
    "global-variable-undefined",
    "import-error",
    "inconsistent-mro",
    "inherit-non-class",
    "init-is-generator",
    "invalid-class-object",
    "invalid-enum-extension",
    "invalid-envvar-value",
    "invalid-format-returned",
    "invalid-hash-returned",
    "invalid-metaclass",
    "invalid-overridden-method",
    "invalid-repr-returned",
    "invalid-sequence-index",
    "invalid-slice-index",
    "invalid-slots",
    "invalid-slots-object",
    "invalid-star-assignment-target",
    "invalid-str-returned",
    "invalid-unary-operand-type",
    "invalid-unicode-codec",
    "isinstance-second-argument-not-valid-type",
    "method-hidden",
    "misplaced-format-function",
    "missing-format-argument-key",
    "missing-format-attribute",
    "missing-kwoa",
    "no-member",
    "no-value-for-parameter",
    "non-iterator-returned",
    "non-str-assignment-to-dunder-name",
    "nonlocal-and-global",
    "not-a-mapping",
    "not-an-iterable",
    "not-async-context-manager",
    "not-callable",
    "not-context-manager",
    "overridden-final-method",
    "raising-bad-type",
    "raising-non-exception",
    "redundant-keyword-arg",
    "relative-beyond-top-level",
    "self-cls-assignment",
    "signature-differs",
    "star-needs-assignment-target",
    "subclassed-final-class",
    "super-without-brackets",
    "too-many-function-args",
    "typevar-double-variance",
    "typevar-name-mismatch",
    "unbalanced-dict-unpacking",
    "unbalanced-tuple-unpacking",
    "unexpected-keyword-arg",
    "unhashable-member",
    "unpacking-non-sequence",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unsupported-binary-operation",
    "unsupported-delete-operation",
    "unsupported-membership-test",
    "used-before-assignment",
    "using-final-decorator-in-unsupported-version",
    "wrong-exception-operation",
]
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.TYPING]
runtime-typing = false

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 72

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL"
]

ignore = [
    "A005",    # Shadowing a Python standard-library module
    "D202",    # No blank lines allowed after function docstring
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "PLR0913", # This is subjective
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT012",   # `pytest.raises()` block should contain a single simple statement
    "TCH",     # flake8-type-checking

    # May conflict with the formatter:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "liminal",
    "tests",
]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",
    "FBT001",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.vulture]
min_confidence = 100
sort_by_size = true
