[build-system]
requires = [
    "poetry-core==2.3.1",
]
build-backend = "poetry.core.masonry.api"

[project]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "anyio>=4.4.0",
    "cryptography==46.0.5",
    "httpx==0.28.1",
    "mashumaro==3.20",
    "msal==1.35.0",
    "requests>=2.32.2",
]
description = "The Liminal SDK for Python"
license = "Apache-2.0"
name = "liminal-sdk-python"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "2024.09.0b1"

[project.optional-dependencies]
all = [
    "liminal-sdk-python[build,lint,release,test]",
]
build = [
    "uv==0.10.5",
]
lint = [
    "blacken-docs==1.20.0",
    "codespell==2.4.1",
    "darglint==1.8.1",
    "mypy==1.19.1",
    "pre-commit-hooks==6.0.0",
    "pre-commit==4.5.1",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.2",
    "ruff==0.15.2",
]
release = [
    "tomli==2.4.0",
    "tomli-w==1.2.0",
]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-httpx==0.36.0",
]

[tool.coverage.report]
exclude_lines = [
    "TYPE_CHECKING",
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = [
    "liminal",
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
python_version = "3.12"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = [
    "Liminal AI <info@liminal.ai>",
]
packages = [
    { include = "liminal" },
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "A005",    # Shadowing a Python standard-library module
    "D202",    # No blank lines allowed after function docstring
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "PLR0913", # This is subjective
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT012",   # `pytest.raises()` block should contain a single simple statement
    "TCH",     # flake8-type-checking

    # May conflict with the formatter:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812",
    "COM819",
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]
select = [
    "ALL"
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = [
    "liminal",
    "tests",
]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",
    "FBT001",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.vulture]
min_confidence = 100
sort_by_size = true
